# gamaja_BE

./: .env.dev  .gitignore  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.local.conf  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml
api/: test_websocket.py
api/TILs/: apps.py  models.py  serializers.py  urls.py  views.py
api/TILs/migrations/: 0001_initial.py  (+2 more)
api/attendances/: models.py  serializers.py  urls.py  views.py
api/baekjoons/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
api/challenges/: consumers.py  models.py  serializers.py  urls.py  views.py
api/coins/: models.py  serializers.py  urls.py  views.py
api/common/: models.py
api/config/: asgi.py  celery.py  settings.py  urls.py
api/follows/: models.py  serializers.py  urls.py  views.py
api/githubs/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
api/guestbooks/: models.py  serializers.py  urls.py  views.py
api/items/: models.py  serializers.py  urls.py
api/notifications/: apps.py  consumers.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
api/potatoes/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/programmers/: models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
api/stacks/: admin.py  models.py  serializers.py  urls.py  views.py
api/users/: encrypt_utils.py  generate_key.py  models.py  services.py  signals.py  user_profile_serializers.py  user_tier_utils.py  utils.py
(+43 files in other folders)
